<resources>
    <string name="app_name">The Cannonball App</string>
    <string name="action_settings">Action Settings</string>

    <string name="spot1_btn">Spot 1. History</string>
    <string name="spot2_btn">Spot 2. Front Hall</string>
    <string name="spot3_btn">Spot 3. Stair Landing</string>
    <string name="spot4_btn">Spot 4. Main Landing</string>
    <string name="spot5_btn">Spot 5. Front Bedroom</string>
    <string name="spot6_btn">Spot 6. Back Bedroom</string>
    <string name="spot7_btn">Spot 7. Sleeping Porch</string>
    <string name="spot8_btn">Spot 8. Dining Room</string>
    <string name="spot9_btn">Spot 9. Kitchen Structure</string>
    <string name="comment_btn">Comment</string>
    <string name="welcome">Welcome to The Cannonball App!\nThroughout the museum are numbered spots.  When you see one, please select it from the list below for information.</string>
    <string name="comment_prompt">If you enjoyed the app, please give your thoughts and suggestions and share the spots you liked by pressing the button below to navigate to the comment screen.</string>
    <string name="like_prmpt">Was this spot interesting?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="comment_hint">Please enter your comments here</string>
    <string name="comment_txt">Thank you for taking the time to submit your comments and preferences.</string>
    <string name="submit">Submit</string>
    <string name="liked">Liked:</string>
    <string name="disliked">Disliked:</string>
    <string name="comments">Comments:</string>
    <string name="rate_dialogue_title">Rate this app:</string>
    <string name="rate_dialogue_message">Do you like The Cannonball App? Please rate us on the appstore.</string>
    <string name="rate_dialogue_positive">Rate now</string>
    <string name="rate_dialogue_negative">No thanks</string>
    <string name="rate_dialogue_pos_toast_msg">Thank You!!!</string>
    <string name="rate_dialogue_neg_toast_msg">Ok!</string>
</resources>
