<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fillViewport="true">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />
        </TableRow>

        <TableRow>
            <TextView />
        </TableRow>

        <TableRow
            android:layout_gravity="center_horizontal">
            <TextView
                android:text="@string/like_prmpt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
            />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/yesBtn"
                android:text="@string/yes"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onLike"
            />

            <Button
                android:id="@+id/noBtn"
                android:text="@string/no"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onLike"
            />
        </TableRow>
     </TableLayout>
</ScrollView>